# fantastic-robot

./: .gitignore  MANIFEST.in  README.md  app.py  passenger_wsgi.py  pyproject.toml  requirements.txt
.github/workflows/: small.yml
app/: __init__.py  routes.py
smallworker/: __init__.py  routes.py
smallworker/helpers/: image_generator.py  route_helper.py  scheduler_helper.py
smallworker/utils/: config.py  response.py
templates/: index.html
test/: bits_and_bobs.py
