[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["smallworker*"]

[project]
name = "smallworker"
version = "0.0.1"
authors = [
  { name="Kamil" },
]
description = "Service worker"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'flask',
    'requests',
    'python-dotenv',
    'apscheduler',
    'openai',
    'pytz'
]

[project.urls]
"Homepage" = "https://github.com/kami2/smallworker"
